# Red-Alert-Geodash

./: .dockerignore  .env.example  .gitignore  .woodpecker.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  run.sh
.claude/commands/: deploy.md
backend/: pyproject.toml  server.py
docs/: data-structure.md  polling-resource-usage.md  user-guide.md
research/: area_regions.json
scripts/: nightly-backup.sh
www/: alerts-news.html  dashboard.html  history.html  map.html  news.html  settings.html  tablet.html  tv.html
www/static/: components.js  dashboard.js  history.js  tv.js
