[project]
name = "red-alert-geodash"
version = "1.2.0"
description = "Real-time dashboard for Israel Pikud HaOref alerts with InfluxDB time-series storage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "influxdb-client>=1.40",
]

[project.scripts]
geodash = "server:app"
